# ball_collection-based-on-turtlebot

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/semantic_density_map/include/semantic_density_map/: density_map_builder_node.hpp  semantic_path_planner_node.hpp
install/semantic_density_map/share/semantic_density_map/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/semantic_density_map/share/semantic_density_map/cmake/: semantic_density_mapConfig.cmake
install/semantic_density_map/share/semantic_density_map/launch/: semantic_density_system.launch.py
install/turtlebot3_ball_collection/share/turtlebot3_ball_collection/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_ball_collection/share/turtlebot3_ball_collection/cmake/: turtlebot3_ball_collectionConfig.cmake
install/turtlebot3_ball_collection/share/turtlebot3_ball_collection/launch/: ball_collection.launch.py  full_system.launch.py  slam_navigation.launch.py
install/turtlebot3_ball_collection/share/turtlebot3_ball_collection/param/: slam_toolbox.yaml
log/: latest_build
turtlebot3/turtlebot3_ball_collection/: CMakeLists.txt  DATA_TRANSMISSION_LOGIC.md  README.md  package.xml
turtlebot3/turtlebot3_ball_collection/include/: ball_detector_node.hpp  density_map_builder_node.hpp  path_planner_node.hpp  semantic_path_planner_node.hpp
turtlebot3/turtlebot3_ball_collection/launch/: ball_collection.launch.py  full_system.launch.py
turtlebot3/turtlebot3_ball_collection/param/: slam_toolbox.yaml
turtlebot3/turtlebot3_ball_collection/scripts/: ball_collector.py
turtlebot3/turtlebot3_ball_collection/src/: ball_detector_node.cpp  density_map_builder_node.cpp  path_planner_node.cpp  semantic_path_planner_node.cpp  tsp_planner_node.cpp
turtlebot3/turtlebot3_vision/: package.xml  setup.cfg  setup.py
turtlebot3/turtlebot3_vision/turtlebot3_vision/: yolo_detector_node.py
turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
turtlebot3_simulations/turtlebot3_gazebo/launch/: robot_state_publisher.launch.py  turtlebot3_world.launch.py
turtlebot3_simulations/turtlebot3_gazebo/scripts/: spawn_random_tennis_balls.py
turtlebot3_simulations/turtlebot3_gazebo/worlds/: tennis_court.world
(+51 files in other folders)
